--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlashScore</title>
+    <title>Clicker</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
